# PhystechTPHomeworks

./: FirstHWScript.sh  README.MD  learnScript.sh
Fifth_HW/: CMakeLists.txt  README.MD
SecondHW/: CMakeLists.txt
SecondHW/A/: CMakeLists.txt  preparing.py
SecondHW/B/: CMakeLists.txt  lib.cpp
SecondHW/C/: main.cpp  main.h
Sixth_HW/: README.MD  docker-compose.yml  mailu.env
Third_HW/: README.MD  config.ini  pc_build.sh  rpi_build.sh
